<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Redoxer</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">



        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="usernamemob">Mobile Number</string>
    <string name="redoxer">Redoxer</string>
    <string name="forget_pin">Forget Pin</string>
    <string name="Reset_pin">Set Pin</string>
    <string name="ask">Do You Have A Redoxer ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="desc">Redoxer is a non-prescription, wearable, wellness OTC device. </string>
    <string name="redoxdoyouhave">DO YOU HAVE REDOXER ?</string>
    <string name="redoxpurchasetitle">DO YOU WANT TO PURCHASE</string>
    <string name="introducing">INTRODUCING</string>
    <string name="revolution">REVOLUTION IN HEALTHCARE</string>
    <string name="registercap">REGISTRATION</string>
    <string name="purchase">Purchase</string>
    <string name="purchaselater">Purchase Later</string>
    <string name="Benifitsofredox">BENIFITS OF REDOXER</string>
    <string name="registeronly">Register</string>
    <string name="register">Registration</string>
    <string name="registerhere">Register Here</string>
    <string name="update">Update</string>
    <string name="paynow">Pay Now</string>
    <string name="alreadydonepay">If You Have Not Done The Payment</string>
    <string name="taketretmentself">Are You Going To Take Redoxer Treament for </string>
    <string name="scannow">Scan Now</string>
    <string name="scan_yout_qr_code">SCAN YOUR  QR CODE HERE</string>
    <string name="scan_yout_qr_codeinstru">(QR Code is Provided on the back of the Brochure)</string>
    <string name="regdevicehead">THIS DEVICE IS ALREADY REGISTERED</string>
    <string name="regdevicedec1">Have You Got This Device From Someone Else</string>
    <string name="regdevicedec2">Do You Own This Device</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="date">dd-MM-yyyy</string>
    <string name="mob">Mobile</string>
    <string name="pin">Pin</string>
    <string name="pincode">Pincode</string>
    <string name="pass">Password</string>
    <string name="repass">Re Password</string>
    <string name="Ok">OK</string>
    <string name="login">Login</string>
    <string name="ask_purchase">Do You Want To Purchase Redoxer ?</string>
    <string name="submit">Submit</string>
    <string name="t_c">I agree to Terms and Conditions.</string>
    <string name="already">Already have account ? Login here</string>
    <string name="inst">Instructions</string>
    <string name="instr_one">Step 1: Please start Both the devices.</string>
    <string name="next">Next</string>
    <string name="instr_two">Step 2: Please turn on your Bluetooth and GPS settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in </string>
    <string name="firstchild">Create First User</string>
    <string name="secondchild">Create Second User</string>
    <string name="purchaselicence">Purchase Third User Licence</string>
    <string name="starttreatment">Start Your Treatment</string>
    <string name="knowtreatement">Know Your Treatment</string>
    <string name="viewtreatement">View Your Treatment </string>
    <string name="treatmentcycle">Treatment Cycle</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="sys">Sys : </string>
    <string name="dia">DIA (mmhg):</string>
    <string name="Treatment_cycle">Treatment Cycle (20 Minutes)</string>
    <string name="cycle1_left">Cycle 1 (5m): Pending</string>
    <string name="cycle2_left">Cycle 2 (5m): Pending</string>
    <string name="cycle1_right">Cycle 1 (5m): Pending</string>
    <string name="cycle2_right">Cycle 2 (5m): Pending</string>
    <string name="treatment_readings_text">Treatment Readings</string>
    <string name="redoxerttext1">Your Redoxer Treatment for Today is Done.</string>
    <string name="redoxerttext2">To View Your Previous result history, press the Logs Button Below. </string>
    <string name="summary">Logs</string>
    <string name="home">Home</string>
    <string name="Close" />
    <string name="Open" />
    <string name="dys">Dys : </string>
    <string name="hr">Hr : </string>
    <string name="save">Save</string>
    <string name="pulse">Pulse :</string>
    <string name="redoxer_image_2">Redoxer Image 2</string>
    <string name="rdeoxer_image_1">Rdeoxer Image 1</string>
    <string name="redoxer_image_3">Redoxer Image 3</string>
    <string name="enter_your_4_digit_pin">Enter Your 4 Digit Pin</string>
    <string name="treatment_pin">Treatment PIN</string>
    <string name="new_treatment_pin">New Treatment PIN</string>
    <string name="instruction_page">Instruction Page</string>
    <string name="image_instuction">Image Instruction</string>
    <string name="video_instruction">Video Instruction</string>
    <string name="audio_instruction">Audio Instruction</string>
    <string name="slidetitle3">We Care For Your Family</string>
    <string name="slidedec3">Lets all take a step ahead towards a Heart Attack Proof India </string>
    <string name="slidedec31">Keep Your Family Healthy</string>
</resources>