<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisteredDeviceSrc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/txtdevicehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/regdevicehead"
        android:layout_marginTop="@dimen/title_24sp"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="154dp"
        android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtdevicedec1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/regdevicedec1"
            android:layout_marginTop="@dimen/margin_24dp"
            android:textSize="20sp"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="125dp"
            tools:layout_editor_absoluteY="154dp"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btnregdevice"
            android:layout_width="144dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:backgroundTint="#f8a519"
            android:fontFamily="HelveticaNeue"
            android:text="@string/registerhere"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtprodctdec2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/regdevicedec2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btnregdevicelog"
            android:layout_width="144dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:backgroundTint="#f8a519"
            android:fontFamily="HelveticaNeue"
            android:text="@string/login"
            android:textColor="@color/black" />

    </LinearLayout>
</RelativeLayout>