<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/idInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="Georgia"
            android:gravity="center"
            android:text="@string/instruction_page"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_marginTop="195dp"

            android:layout_marginEnd="111dp"
            android:layout_marginRight="111dp"
            android:fontFamily="Georgia"
            android:gravity="center"
            android:text="@string/audio_instruction"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="277dp"
            android:layout_marginEnd="108dp"
            android:layout_marginRight="108dp"
            android:fontFamily="Georgia"
            android:gravity="center"
            android:text="@string/video_instruction"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/idiamge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="238dp"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="110dp"
            android:fontFamily="Georgia"
            android:gravity="center"
            android:text="@string/image_instuction"
            android:textSize="18sp"
            tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/btnskip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="13dp"
            android:background="#f8a519"
            android:fontFamily="HelveticaNeue"
            android:onClick="skip"
            android:text="Next"
            android:textColor="@color/black" />


    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>