<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgCheck"
            android:visibility="gone"
            android:layout_margin="@dimen/margin_8dp"
            app:srcCompat="@drawable/ic_check_black_24dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/margin_8dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/right"
                android:textSize="@dimen/margin_18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sys" />

                <TextView
                    android:id="@+id/rrSys"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=" 0 " />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/dys" />

                <TextView
                    android:id="@+id/rrDys"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=" 0 " />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/hr" />

                <TextView
                    android:id="@+id/rrHr"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=" 0 " />

            </LinearLayout>

        </LinearLayout>

        <!--<View-->
        <!--android:background="@color/dark_blue"-->
        <!--android:layout_width="@dimen/margin_1dp"-->
        <!--android:layout_height="wrap_content"/>-->

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/left"
                android:textSize="@dimen/margin_18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/sys" />

                <TextView
                    android:id="@+id/llSys"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=" 0 " />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/dys" />

                <TextView
                    android:id="@+id/llDys"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=" 0 " />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/hr" />

                <TextView
                    android:id="@+id/llHr"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=" 0 " />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>