<?xml version="1.0" encoding="utf-8"?>
<!--android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/maintoolbar1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

     <ImageView
        android:id="@+id/mtoolimgview"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:visibility="visible"
       android:layout_alignParentLeft="true"
        app:srcCompat="@drawable/glogo"
       tools:ignore="VectorDrawableCompat" />

             <TextView
                 android:id="@+id/maintxttitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="HelveticaNeue"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="30dp"
                 android:text="@string/introducing"
                 android:textColor="@color/white"
                 android:textSize="18sp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <!--TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="0dp"
        android:layout_margin="@dimen/title_50dp"
        android:text="@string/ask"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        /-->

    <!--android:layout_alignParentStart="true"/-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maintoolbar1"
        android:layout_alignBottom="@+id/linLayTwo"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView

            android:id="@+id/txtmaintitile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/elemental_end"
            android:gravity="center"
            android:padding="@dimen/dp10"
            android:text="REDOXER"
            android:textColor="@color/dark_blue"
            android:textSize="30dp" />


   <!-- <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:textAlignment="center"
        app:cardUseCompatPadding="true"
        android:background="#fff3f3f3">
    </android.support.v7.widget.CardView>-->

        <ImageView
            android:id="@+id/imgdevice"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="170dp"
            android:scaleType="centerCrop"
            android:scrollbarSize="@dimen/margin_4dp"
            app:srcCompat="@drawable/deviceshadow" />


        <TextView
            android:id="@+id/txtrevolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-170sp"
            android:fontFamily="HelveticaNeue"
            android:gravity="center"
            android:text="@string/revolution"
            android:textColor="@color/dark_blue"
            android:textSize="25sp" />

    <TextView
        android:id="@+id/txtdhr"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        android:text="@string/redoxdoyouhave" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayTwo"
        android:padding="@dimen/margin_8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            cardCornerRadius="@dimen/dp10"
            android:elevation="2dp"
           >
            <!--  android:background="#f8a519"-->
            <Button
                android:id="@+id/btnYes"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:backgroundTint="#f8a519"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:fontFamily="HelveticaNeue"
                android:text="@string/yes"
                android:textColor="@color/black"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            cardCornerRadius="@dimen/dp10"
            android:elevation="2dp">

            <Button
                android:id="@+id/btnNo"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="#f8a519"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:fontFamily="HelveticaNeue"
                android:onClick="btnClick"
                android:padding="2dp"
                android:text="@string/no"
                android:textColor="@color/black" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</RelativeLayout>

    <!--android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        android:id="@+id/nv">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout-->


